--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -20,7 +20,7 @@
                             electrónico. Si ya tiene contraseña, puede iniciar sesión haciendo
                             <a href="javascript:void(0);" (click)="goback()" class="text-primary"> click aquí!</a>
                         </p>
-                        <form [formGroup]="formLogin" class="mb-4 was-validated">
+                        <form [formGroup]="formLogin" class="mb-4 was-validated" (submit)="submitEmail()">
                             <!-- alert messages -->
                             <div class="alert alert-danger fade show mb-2 global-danger" role="alert" *ngIf="isShowAlert=='danger'">
                                 <div class="row">
@@ -51,8 +51,7 @@
                                         <label for="floatingInput">Usuario</label>
                                     </div>
                                     <!-- submit button -->
-                                    <button class="btn btn-lg btn-theme z-index-5 btn-square-lg" type="button"
-                                        (click)="submitEmail()"><i class="bi bi-arrow-right"></i></button>
+                                    <button class="btn btn-lg btn-theme z-index-5 btn-square-lg" type="submit"><i class="bi bi-arrow-right"></i></button>
                                 </div>
                             </div>
                         </form>
