--- a/src/app/auth/password/password.component.html
+++ b/src/app/auth/password/password.component.html
@@ -14,9 +14,9 @@
                             <a (click)="goback()" class="text-theme"><i class="bi bi-arrow-left"></i> Volver</a>
                         </p>
                         <p class="h4 fw-light mb-4">Ingrese su Contraseña</p>
-                        <p class="text-secondary small mb-4">Hemos encontrado un usuario que ya está registrado con nosotros. Por favor ingrese su contraseña para continuar.</p>
+                        <p class="text-secondary mb-4">Hemos encontrado un usuario que ya está registrado con nosotros. Por favor ingrese su contraseña para continuar.</p>
 
-                        <form [formGroup]="formPasswd" class="mb-4">
+                        <form [formGroup]="formPasswd" class="mb-4" (submit)="submitPassword()">
                             <!-- alert messages -->
                             <div class="alert alert-danger fade show mb-2 global-danger" role="alert" *ngIf="isShowAlert=='danger'">
                                 <div class="row">
@@ -48,12 +48,12 @@
                                     </div>
                                     <span class="input-group-text text-secondary bg-white border-end-0" id="viewpassword" (click)="viewpassword()"><i class="bi bi-eye" *ngIf="!showpass"></i> <i class="bi bi-eye-slash" *ngIf="showpass"></i></span>
                                     <!-- submit button -->
-                                    <button class="btn btn-lg btn-theme top-0 end-0 z-index-5 btn-square-lg" type="button" id="submitpassbtn" (click)="submitPassword()"><i class="bi bi-arrow-right"></i></button>
+                                    <button class="btn btn-lg btn-theme top-0 end-0 z-index-5 btn-square-lg" type="submit" id="submitpassbtn"><i class="bi bi-arrow-right"></i></button>
                                 </div>
                             </div>
                             <div class="invalid-feedback">Enter valid password and just click again to continue </div>
                         </form>
-                        <p class="text-secondary small mb-4">Si olvidaste tu contraseña, <br>¡Puedes <b>restablecerla</b> haciendo <a routerLink="/auth/forgot-password" class="text-primary"> click aquí!</a></p>
+                        <p class="text-secondary mb-4">Si olvidaste tu contraseña, <br>¡Puedes <b>restablecerla</b> haciendo <a routerLink="/auth/forgot-password" class="text-primary"> click aquí!</a></p>
                     </div>
                 </div>
             </div>
