--- a/src/app/shared/components/form-pay/form-pay.component.scss
+++ b/src/app/shared/components/form-pay/form-pay.component.scss
@@ -1,6 +1,6 @@
 .copiar{
     border-radius: 5px;
-    background-color: #3166b6;
+    background-color: #bb9f2f;
     border: none;
     color: white;
     margin-bottom: 10px;
