--- a/src/app/shared/layout/content/content.component.html
+++ b/src/app/shared/layout/content/content.component.html
@@ -15,11 +15,11 @@
 <!-- Sidebar ends -->
 
 <!-- Begin page content -->
-<main class="main mainheight position-relative" #mainContainer>
+<main class="main mainheight position-relative" #mainContainer style="background: #e6edf9 !important; box-shadow: none !important;">
     <router-outlet class="h-100"></router-outlet>
 </main>
 <!-- Page content ends-->
 
 <!-- footer -->
-<app-footer #FooterEl class="footer mt-auto z-index-1 position-relative d-block"></app-footer>
+<app-footer #FooterEl class="footer mt-auto z-index-1 position-relative d-block" style="background: #e6edf9 !important;"></app-footer>
 <!-- footer ends -->    
