--- a/src/app/shared/components/form-pay/form-pay.component.html
+++ b/src/app/shared/components/form-pay/form-pay.component.html
@@ -10,9 +10,9 @@
                     <div class="col-12 text-center bg-light text-dark">
                         <p>Empresa: PagoEfectivo<br> Servicio: PagoEfectivo Soles</p>
                     </div>
-                    <div class="col-6 text-center bg-primary" ng-show="displayTooltip">
-                        <p class="text-light">Código de Pago</p>
-                        <h4 class="text-light">{{generate.payment_code}}</h4>
+                    <div class="col-6 text-center" ng-show="displayTooltip" style="background-color: #ffcc00;">
+                        <p class="">Código de Pago</p>
+                        <h4 class="">{{generate.payment_code}}</h4>
                         <button class="copiar" ng-click="displayTooltip = true" (click)="copyToClipboard()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
                                 <path d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z"/>
