--- a/src/app/shared/components/perfil/perfil.component.html
+++ b/src/app/shared/components/perfil/perfil.component.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col pt-3">
-                    <h2>{{userName}} <span class="badge bg-green rounded vm fw-normal fs-12"><i class="bi bi-check-circle me-1"></i>Activo</span></h2>
+                    <h2>{{profile.nombres}} {{profile.apellidos}} <span class="badge bg-green rounded vm fw-normal fs-12"><i class="bi bi-check-circle me-1"></i>Activo</span></h2>
                     <p class="text-secondary mb-3"><i class="bi bi-credit-card-2-front me-1"></i>ID USUARIO: <b>{{profile.dni}}</b></p>
                 </div>
                 <div class="col-auto py-3 align-self-center">
