--- a/src/app/shared/components/perfil/perfil.component.html
+++ b/src/app/shared/components/perfil/perfil.component.html
@@ -1,9 +1,9 @@
 <div class="card rounded-0 border-0 mb-4">
-    <figure class="coverimg w-100 h-300 mb-0 position-relative" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1189943514126094376/cover_perfil_altux.png?ex=65a00041&is=658d8b41&hm=9018ef16479a0bdc8bc2fd6ecf314390cf255c058f4ced6978773e85465a5e9e&');">
+    <figure class="coverimg w-100 h-300 mb-0 position-relative" style="background-image: url('https://files-altux.s3.sa-east-1.amazonaws.com/Perfil/cover_perfil_altux.png');">
         <!-- <div class="position-absolute bottom-0 end-0 m-3">
             <button class="btn btn-light"><i class="bi bi-camera"></i> Change Cover</button>
         </div> -->
-        <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1189943514126094376/cover_perfil_altux.png?ex=65a00041&is=658d8b41&hm=9018ef16479a0bdc8bc2fd6ecf314390cf255c058f4ced6978773e85465a5e9e&" class="" style="display: none;" />
+        <img src="https://files-altux.s3.sa-east-1.amazonaws.com/Perfil/cover_perfil_altux.png" class="" style="display: none;" />
     </figure>
     <div class="card-body">
         <div class="container px-0">
