--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -10,6 +10,7 @@
                     <th class="text-center">Celular</th>
                     <th class="text-center">Correo</th>
                     <th class="text-center">Diplomado</th>
+                    <th class="text-center">Estado</th>
                     <th class="text-center">Fecha Registro</th>
                     <th class="text-center">Acciones</th>
                 </tr>
@@ -22,33 +23,17 @@
                     <td class="text-center"><a href="https://wa.me/51{{valalumnos.telefono}}" target="_blank">{{valalumnos.telefono}}</a></td>
                     <td class="text-center">{{valalumnos.email}}</td>
                     <td class="text-center">{{valalumnos.courses_name}}</td>
+                    <td class="text-center">{{valalumnos.estado.nombre}}</td>
                     <td class="text-center"><b>{{valalumnos.created_at | date:'dd/MM/yyyy' }}</b></td>
                     <td class="text-center">
-                        <!-- <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Eliminar Cliente"
-                                class="" (click)="openDelete(valalumnos.id)">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                            </svg>
+                        <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Generar Código de Pago"
+                                class="my-1 mx-3" (click)="openModalSeguimiento(valalumnos)">
+                            <i class="bi bi-cart-plus"></i>
                         </a>
                         <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Generar Código de Pago"
-                                class="my-1 mx-3"
-                                (click)="openModalPay(valalumnos.id, valalumnos.names,
-                                valalumnos.courses_name, valalumnos.num_doc, valalumnos.courses_code)">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
-                                <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"/>
-                                <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"/>
-                                <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"/>
-                            </svg>
+                                class="my-1 mx-3" (click)="openModal(valalumnos)">
+                            <i class="bi bi-cart-plus"></i>
                         </a>
-                        <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Editar Cliente"
-                            class="" (click)="openModalEdit(valalumnos)">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                            </svg>
-                        </a> -->
                     </td>
                 </tr>
                 </tbody>
@@ -56,6 +41,243 @@
         </div>
     </div>
 </div>
+<!-- Empieza modal registro-->
+<ng-template #register let-modal>
+    <form [formGroup]="formRegistro" class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
+        <div class="card-header">
+            <h5 class="mb-1">Nuevo Registro Leads</h5>
+            <p class="text-secondary title">M = Matrícula | F = Ficha</p>
+        </div>
+        <div class="card-body modal-body">
+            <div class="row was-validated">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center ficha">
+                    <div class="btn-container">
+                        <label class="switch btn-color-mode-switch">
+                            <input type="checkbox" name="color_mode" id="color_mode" value="1" (change)="select($event)">
+                            <label for="color_mode" data-on="F" data-off="M" class="btn-color-mode-switch-inner"></label>
+                        </label>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2" *ngIf="!ficha">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-book"></i></span>
+                            <div class="form-floating">
+                                <select (change)="selectMatricula($event)" class="form-select border-start-0" formControlName="tipo_matricula" required>
+                                    <option value="" disabled selected>Seleccionar Tipo Matricula</option>
+                                    <option *ngFor="let tipoMat of tipo_matricula" value="{{tipoMat.id}}">
+                                        {{tipoMat.name}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 mb-2" *ngIf="!ficha && discount">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="alert alert-primary nuevo text-center" role="alert">
+                                <b>DETALLE MATRÍCULA</b>
+                            </div>
+                            <div class="order-table table-responsive">
+                                <table class="table table-bordered" *ngIf="discount">
+                                    <tbody>
+                                    <tr>
+                                        <td class="text-dark">
+                                            <small>{{nombre_descuento}}:</small>
+                                        </td>
+                                        <td *ngIf="mostrarDiscount">
+                                            <small>S/ {{discount.first_payment}}.00</small>
+                                        </td>
+                                        <td *ngIf="!mostrarDiscount">
+                                            <small>S/ {{discount.price_diplomado}}.00</small>
+                                        </td>
+                                    </tr>
+                                    <tr  *ngIf="mostrarDiscount">
+                                        <td class="text-dark">
+                                            <small>Primera Cuota:</small>
+                                        </td>
+                                        <td>
+                                            <small>S/ {{discount.second_payment}}.00</small>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-dark">
+                                            <small>Descuento:</small>
+                                        </td>
+                                        <td>
+                                            <small>S/ {{discount.price_discount}}.00</small>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-dark">
+                                            <small><b>Total a Pagar:</b></small>
+                                        </td>
+                                        <td>
+                                            <b>
+                                                <small>S/ {{discount.price_diplomado}}.00</small>
+                                            </b>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2" *ngIf="!ficha && mostrarDate">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="Ingrese Apellido" formControlName="fecha" type="date" class="form-control border-start-0" autocomplete="off" required>
+                            </div>
+                        </div>
+                        <small class="text-muted">Ingresar Fecha 2do Pago</small>
+                        <div *ngIf="formRegistro.controls['fecha'].invalid && (formRegistro.controls['fecha'].dirty || formRegistro.controls['fecha'].touched)" >
+                            <div *ngIf="formRegistro.controls['fecha'].errors.required">
+                                <small class="text-danger">Por favor ingrese la fecha, dar click en el icono de calendario</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-12 col-md-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-key"></i></span>
+                            <div class="form-floating">
+                                <select class="form-select border-start-0" formControlName="grado_instruccion" required>
+                                    <option value="" disabled selected>Seleccionar Grado</option>
+                                    <option *ngFor="let grado of grado_instruccion" value="{{grado.name}}">
+                                        {{grado.name}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-12 col-md-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-key"></i></span>
+                            <div class="form-floating">
+                                <select (change)="selectCargo($event)" class="form-select border-start-0" formControlName="cargo" required>
+                                    <option value="" disabled selected>Seleccionar Cargo</option>
+                                    <option *ngFor="let carg of cargo" value="{{carg.name}}">
+                                        {{carg.name}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2" *ngIf="area">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-key"></i></span>
+                            <div class="form-floating">
+                                <select class="form-select border-start-0" formControlName="area" required>
+                                    <option value="" disabled selected>Seleccionar Area</option>
+                                    <option *ngFor="let areaTrab of area_trabajo" value="{{areaTrab.nombre}}">
+                                        {{areaTrab.nombre}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2" *ngIf="!ficha">
+                    <br>
+                    <div class="form-group form-check form-switch">
+                        <input class="form-check-input" (change)="optionFacture($event)"
+                               type="checkbox" formControlName="is_factura">
+                        <label>
+                            Solicitar Factura
+                        </label>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-12 col-md-12 text-center mb-2" *ngIf="is_facture && !ficha">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-badge"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="ruc" class="form-control border-start-0" autocomplete="off" maxlength="11"
+                                onkeyup="if (/\D/g.test(this.value)) this.value = this.value.replace(/\D/g,'')" (keyup)="getInfoByRuc($event)" required>
+                                <label for="floatingInput">Ingrese Nº RUC</label>
+                            </div>
+                        </div>
+                        <a href="javascript:void(0);" class="tag mb-2 me-2" *ngIf="nameruc">
+                            <i class="bi bi-person vm ms-2 mx-2"></i> {{nameruc}}
+                        </a>
+                        <div *ngIf="formRegistro.controls['ruc'].invalid && (formRegistro.controls['ruc'].dirty || formRegistro.controls['ruc'].touched)" >
+                            <div *ngIf="formRegistro.controls['ruc'].errors.required">
+                                <small class="text-danger">Por favor ingrese su número de RUC</small>
+                            </div>
+                            <div *ngIf="formRegistro.controls['ruc'].errors.maxlength">
+                                <small class="text-danger">Excediste el número máximo de caracteres</small>
+                            </div>
+                            <div *ngIf="formRegistro.controls['ruc'].errors.minlength">
+                                <small class="text-danger">Debe contener como mínimo 11 caracteres</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="row">
+                <div class="col-auto">
+                    <button class="btn btn-sm btn-theme" (click)="saveRegister()" [disabled]="!formRegistro.valid">Registro Estado</button>
+                    <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModal()">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</ng-template>
+<!-- Empieza modal seguimiento-->
+<ng-template #seguimiento let-modal>
+    <form [formGroup]="formSeguimiento" class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
+        <div class="card-header">
+            <h5 class="mb-1 title">REGISTRO ESTADO</h5>
+        </div>
+        <div class="card-body modal-body">
+            <div class="row was-validated">
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-book"></i></span>
+                            <div class="form-floating">
+                                <select (change)="selectSeguimiento($event)" class="form-select border-start-0" formControlName="estado" required>
+                                    <option value="" disabled selected>Seleccionar Estado</option>
+                                    <option *ngFor="let valSeg of estado" value="{{valSeg.id}}">
+                                        {{valSeg.nombre}}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-3 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-chat-right-text"></i></span>
+                            <div class="form-floating">
+                                <textarea required class="form-control border-start-0 h-auto" rows="3" formControlName="reason"></textarea>
+                                <label>Motivo Eliminación</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="row">
+                <div class="col-auto">
+                    <button class="btn btn-sm btn-theme" (click)="saveSeguimiento()" [disabled]="!formSeguimiento.valid">Registro Estado</button>
+                    <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModalSeguimiento()">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</ng-template>
 <!-- SPINNER -->
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
     <p style="color: white" > Cargando... </p>
