--- a/src/app/shared/components/exam/modal-finalizado/modal-finalizado.component.html
+++ b/src/app/shared/components/exam/modal-finalizado/modal-finalizado.component.html
@@ -20,10 +20,10 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4">
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4" *ngIf="motrar_nota">
         <span class="badge bg-success">Correcto</span>
         <span class="badge bg-danger mx-2">Incorrecto</span>
-        <span class="badge bg-warning text-dark">Sin responder</span>
+        <span class="badge bg-warning text-light">Sin responder</span>
     </div>
     <!-- <div class="col-lg-12 col-md-12 col-sm-12" *ngFor="let examen of preguntas, index as id">
         <div class="card border-0 bg-gradient-theme-light theme-green h-100">
@@ -70,7 +70,7 @@
         <div class="card border-0 mb-4">
             <div class="card-footer">
                 <div *ngFor="let examen of preguntas, index as id">
-                    <h6 class="title">{{id+1+'.-'}} {{examen.preguntas.texto}}</h6>
+                    <h6 class="title">{{id+1+'.-'}} {{examen.preguntas}}</h6>
                     <div class="d-block text-center" *ngIf="motrar_nota">
                         <div *ngIf="examen.respuesta">
                             <a target="_blank" class="tag theme-green mb-2 me-2" *ngIf="examen.resultado">
