--- a/src/app/ventas/pages/registro/fichas/fichas.component.html
+++ b/src/app/ventas/pages/registro/fichas/fichas.component.html
@@ -31,8 +31,8 @@
                             <i class="bi bi-person-x-fill"></i>
                         </a>
                         <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Generar Código de Pago"
-                                class="my-1 mx-3" (click)="openModalPay(valalumnos)">
-                            <i class="bi bi-cart-plus"></i>
+                                class="mx-3" (click)="openModalPay(valalumnos)">
+                            <i class="bi bi-cash-stack"></i>
                         </a>
                         <!-- <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Editar Cliente"
                             class="" (click)="openModalEdit(valalumnos)">
