--- a/src/app/academic/pages/clases/clases.component.html
+++ b/src/app/academic/pages/clases/clases.component.html
@@ -1,54 +1,56 @@
-<div class="container">
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12" role="alert">
-                            <div class="alert alert-primary nuevo">
-                                <strong class="mx-1"><b>— </b></strong><b>GESTIÓN DE CLASES</b>
-                            </div>
-                        </div>
-                        <br>
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="card border-0 theme-blue bg-gradient-theme-light mb-4">
+            <div class="card-header bg-light-theme">
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <i class="bi bi-bookmark-star h5 avatar avatar-40 bg-light-theme rounded"></i>
                     </div>
-                    <hr>
-                    <form [formGroup]="formgrupos">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-12 col-lg-4 mb-2">
-                                <div class="form-group">
-                                    <ng-select formControlName="diplomado"
-                                               [items]="diplomado"
-                                               bindLabel="courses_name"
-                                               bindValue="courses_code"
-                                               placeholder="SELECCIONAR DIPLOMADO"
-                                               (change)="listModule($event)">
-                                    </ng-select>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-12 col-lg-3 mb-2">
-                                <div class="form-group">
-                                    <ng-select formControlName="modulo"
-                                               [items]="module"
-                                               bindLabel="module_name"
-                                               bindValue="id"
-                                               placeholder="SELECCIONAR MÓDULO"
-                                               (change)="selectModule($event)">
-                                    </ng-select>
-                                </div>
-                            </div>
-                            <div class="col-md-2 col-sm-12 col-lg-2 mb-2">
-                                <div class="form-group">
-                                    <button *ngIf="mostrar"
-                                            class="btn btn-primary mx-2" (click)="openModalInfo()"
-                                            data-bs-toggle="tooltip" data-bs-placement="right" title="Crear Clase">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-                                        </svg>
-                                    </button>
-                                </div>
+                    <div class="col">
+                        <h6 class="fw-medium mb-0 text-uppercase">Gestión de Clase</h6>
+                        <p class="text-secondary small">Fechas de Clases y Grabaciones</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body py-3">
+                <form [formGroup]="formgrupos">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12 col-lg-4 mb-2">
+                            <div class="form-group">
+                                <ng-select formControlName="diplomado"
+                                           [items]="diplomado"
+                                           bindLabel="course_name"
+                                           bindValue="course_code"
+                                           placeholder="SELECCIONAR DIPLOMADO"
+                                           (change)="listModule($event)">
+                                </ng-select>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-md-3 col-sm-12 col-lg-3 mb-2">
+                            <div class="form-group">
+                                <ng-select formControlName="modulo"
+                                           [items]="module"
+                                           bindLabel="module_name"
+                                           bindValue="id"
+                                           placeholder="SELECCIONAR BLOQUE"
+                                           (change)="selectModule($event)">
+                                </ng-select>
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-12 col-lg-2 mb-2">
+                            <div class="form-group">
+                                <button *ngIf="mostrar"
+                                        class="btn btn-primary mx-2" (click)="openModalInfo()"
+                                        data-bs-toggle="tooltip" data-bs-placement="right" title="Crear Clase">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="col-sm-12 col-md-12 col-lg-12 my-2">
                     <div class="table-responsive invoice-table" id="table">
                         <table class="table table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                             <thead>
