--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -259,7 +259,7 @@
         <div class="card-body modal-body">
             <div class="row was-validated">
                 <div class="col-md-12 col-sm-12 col-lg-12 mb-2">
-                    <div class="form-group mb-2 position-relative">
+                    <!-- <div class="form-group mb-2 position-relative">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-book"></i></span>
                             <div class="form-floating">
@@ -271,13 +271,13 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="form-group mb-3 position-relative">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-chat-right-text"></i></span>
                             <div class="form-floating">
                                 <textarea required class="form-control border-start-0 h-auto" rows="3" formControlName="reason"></textarea>
-                                <label>Motivo Eliminación</label>
+                                <label>Motivo Seguimiento</label>
                             </div>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-auto">
-                    <button class="btn btn-sm btn-theme" (click)="saveSeguimiento()" [disabled]="!formSeguimiento.valid">Registro Estado</button>
+                    <button class="btn btn-sm btn-theme" (click)="saveSeguimiento()" [disabled]="!formSeguimiento.valid">Registro</button>
                     <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModalSeguimiento()">Cerrar</button>
                 </div>
             </div>
